# LAS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/lotto_analyzer/: __init__.py  __main__.py
src/lotto_analyzer/client/: __main__.py  api_client.py  profile_manager.py  ssh_tunnel.py  ws_client.py
src/lotto_analyzer/client/api/: __init__.py  admin.py  auth.py  client.py  draws.py  generation.py  ml_training.py  predictions.py  settings.py  telegram.py
src/lotto_analyzer/ui/: app.py  audio_service.py  setup_assistant.py  ui_helpers.py  window.py
src/lotto_analyzer/ui/dialogs/: connection_dialog.py  info_dialog.py  login_dialog.py
src/lotto_analyzer/ui/pages/: ai_chat.py  backtest.py  base_page.py  checker.py  prediction_quality.py  server_monitor.py  server_workers.py  statistics.py
src/lotto_analyzer/ui/pages/checker_pkg/: __init__.py  page.py  part1.py  part2.py  part3.py
src/lotto_analyzer/ui/pages/dashboard/: __init__.py  page.py  part1.py  part2.py  part2_1.py  part2_2.py  part3.py
src/lotto_analyzer/ui/pages/db_manager/: __init__.py  page.py  part1.py  part2.py  part3.py  part4.py
src/lotto_analyzer/ui/pages/generator/: __init__.py  backtest.py  backtest_1.py  backtest_2.py  comparison.py  generation.py  generation_1.py  generation_2.py  generation_3.py  (+9 more)
src/lotto_analyzer/ui/widgets/: ai_panel.py  chart_view.py  chat_box.py  connection_status.py  crawl_status.py  day_selector.py  draw_input.py  help_button.py  improvement_report.py  mic_button.py  model_chooser.py  number_ball.py  speak_button.py  task_status.py  ws_manager.py  year_range.py
(+50 files in other folders)
