[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotto-analyzer"
version = "1.0.0"
description = "LAS — Lotto Analyzer System (GTK4 Desktop Client)"
requires-python = ">=3.12"
dependencies = [
    "lotto-common",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
audio = [
    "gTTS>=2.4.0",
    "openai-whisper>=20240930",
]

[project.scripts]
las = "lotto_analyzer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lotto_analyzer" = ["ui/locale/*/LC_MESSAGES/*.mo"]
